source angular remove react js

--- a/lilreddit.html
+++ b/lilreddit.html
@@ -7,5 +7,6 @@
   <body>
     <div id="app">Lil Reddit</div>
     <script src="dist/lilreddit.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   </body>
 </html>
