--- a/lilreddit.html
+++ b/lilreddit.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://reddit.com/.json">
   <link rel="stylesheet" href="dist/lilreddit.css"/>
   <script src="dist/angular.js"></script>
   <script src="dist/app.js"></script>
@@ -12,7 +13,7 @@
   <div id="home">
     <div ng-app="lilreddit" ng-controller="lilredditCtrl">
         <div ng-repeat="r in rlist">
-            {{r.author}}
+          <strong>{{r.author}}</strong> {{r.title}} <br><br><br> 
         </div>
       </div>
     </div>
